@@ -24,6 +24,7 @@ o In ipmipower, exit with value 1 on IPMI errors in addition to system
 o In ipmidetect, exit with exit value 2 when an error occurs.  Exit
   value of 0 or 1 are reserved for scripting.
 o In ipmi-sel, support new --post-clear option.
+o In bmc-device, support new --set-sensor-reading-and-event-status option.
 
 Libraries
 ---------
